--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/core": "^7.7.2",
     "@babel/generator": "^7.7.2",
     "@babel/traverse": "^7.7.2",
-    "babylon": "^6.18.0"
+    "babylon": "^6.18.0",
+    "less": "^3.10.3"
   }
 }
