--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@babel/generator": "^7.7.2",
     "@babel/traverse": "^7.7.2",
     "babylon": "^6.18.0",
-    "less": "^3.10.3"
+    "less": "^3.10.3",
+    "tapable": "1.1.3",
+    "ejs": "^2.7.2"
   }
 }
