--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   "main": "index.js",
   "repository": "https://github.com/chenxiaoyao6228/demo-code-for-blog.git",
   "author": "ChenXiaoyao <chenxiaoyao6228@163.com> (http://www.chenxiaoyao.cn/)",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "lerna": "3.18.4"
+  }
 }
